<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="85dp"
    android:layout_gravity="bottom"
    android:orientation="vertical"
    tools:background="@android:color/transparent">

    <!--Camera button-->
    <ImageView
        android:id="@+id/iv_camera_action"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="12dp"
        android:background="@color/transparent"
        android:contentDescription="@string/camera_action"
        android:src="@drawable/snap" />

    <!--Flash button-->
    <ImageButton
        android:id="@+id/iv_camera_flash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|bottom"
        android:layout_marginBottom="29dp"
        android:layout_marginStart="44dp"
        android:background="@color/transparent"
        android:contentDescription="@string/camera_flash"
        android:scaleType="center"
        android:src="@drawable/button_flash" />


    <!--Flip Camera button-->
    <ImageButton
        android:id="@+id/iv_camera_flip"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="23dp"
        android:layout_marginEnd="44dp"
        android:background="@color/transparent"
        android:contentDescription="@string/camera_flip"
        android:src="@drawable/camera_flip" />

</FrameLayout>