<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="230dp"
    android:layout_height="75dp"
    android:layout_gravity="start|bottom"
    android:layout_marginBottom="10dp"
    android:orientation="horizontal"
    tools:background="@android:color/black">

    <!--BACK-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="0dp"
        android:orientation="vertical">
        <!--Text-->
        <ImageView
            android:id="@+id/iv_camera_back"
            android:layout_width="20dp"
            android:layout_height="24dp"
            android:layout_gravity="start|center"
            android:layout_marginEnd="130dp"
            android:layout_marginStart="25dp"
            android:background="@color/transparent"
            android:contentDescription="@string/camera_save"
            android:src="@drawable/camera_back" />

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginStart="23dp"
            android:layout_marginTop="4dp"
            android:text="@string/back"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

    </LinearLayout>

    <!--CLEAR ALL-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/clear_all_tv"
            android:layout_width="20dp"
            android:layout_height="24dp"
            android:layout_gravity="start|center"
            android:layout_marginStart="14dp"
            android:gravity="center"
            android:text="@string/ic_clear_all"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/clear_all_text_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="4dp"
            android:text="@string/clear_all"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

    </LinearLayout>


</FrameLayout>