<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingPrefix">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarWhite">
            <include layout="@layout/toolbar"/>
        </android.support.design.widget.AppBarLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:contentDescription="@string/profile_image_circle"
                android:layout_width="115dp"
                android:layout_height="115dp"
                android:background="@drawable/bg_circle_blue_lobby"
                android:layout_centerInParent="true"/>

            <ImageView
                android:contentDescription="@string/profile_image"
                android:id="@+id/ap_profile_pic"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/addphoto"
                android:foregroundGravity="center"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="3dp"
            app:contentPadding="0dp"
            app:cardCornerRadius="3dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@drawable/tab_top_of_card"/>

                <TextView
                    android:id="@+id/ap_your_name_fix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/your_name"
                    fontPath="fonts/AkzidenzGroteskBE-Medium.otf"/>

                <EditText
                    android:id="@+id/ap_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ap_your_name_fix"
                    android:layout_marginStart="23dp"
                    android:layout_marginEnd="23dp"
                    android:hint="@string/first_name"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:inputType="textCapSentences"
                    android:imeOptions="actionNext"
                    fontPath="fonts/AkzidenzGroteskBE-Regular.otf"/>

                <EditText
                    android:id="@+id/ap_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ap_first_name"
                    android:layout_marginStart="23dp"
                    android:layout_marginEnd="23dp"
                    android:hint="@string/last_name"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:inputType="textCapSentences"
                    android:imeOptions="actionNext"
                    fontPath="fonts/AkzidenzGroteskBE-Regular.otf"/>

                <TextView
                    android:id="@+id/ap_email_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/your_email"
                    android:layout_below="@id/ap_last_name"
                    fontPath="fonts/AkzidenzGroteskBE-Medium.otf"/>

                <EditText
                    android:id="@+id/ap_email_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ap_email_text"
                    android:hint="@string/email_address"
                    android:layout_marginStart="23dp"
                    android:layout_marginEnd="23dp"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    fontPath="fonts/AkzidenzGroteskBE-Regular.otf"
                    />

                <TextView
                    android:id="@+id/ap_language_question_fix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ap_email_edit"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/what_languages_do_you_speak"
                    fontPath="fonts/AkzidenzGroteskBE-Medium.otf"/>

                <Spinner
                    android:id="@+id/ap_language_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ap_language_question_fix"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginStart="20dp"
                    android:enabled="false"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>
        <Button
            android:id="@+id/ap_submit_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/get_started"
            fontPath="fonts/AkzidenzGroteskBE-Regular.otf"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"/>
    </LinearLayout>

    <include layout="@layout/progress_view"/>
</FrameLayout>